# OpenCV-Text_Recognition

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
ocr_toolkit/: __init__.py  cli.py  line_detect.py  ocr.py  pipeline.py  preprocessing.py  skew.py  slicer.py
