[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocr-toolkit"
version = "1.0.0"
description = "基于 OpenCV + Tesseract 的表格图像 OCR 工具包"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "OCR Toolkit Contributors"},
]
keywords = ["ocr", "opencv", "tesseract", "table", "text-recognition"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
pandas = ["pandas>=2.0.0"]
excel = ["pandas>=2.0.0", "openpyxl>=3.1.0"]
all = ["pandas>=2.0.0", "openpyxl>=3.1.0"]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
]

[project.scripts]
ocr-toolkit = "ocr_toolkit.cli:main"

[project.urls]
Repository = "https://github.com/user/ocr-toolkit"

[tool.setuptools.packages.find]
include = ["ocr_toolkit*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
